--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         <button id="five">charAt</button>
     </div>
     <div>
-        <button id="numCheck">numCheck</button>
+        <button id="numCheck">strCheck</button>
         <button id="reset">reset</button>
+        <button id="insert">insert new</button>
     </div>
 </div>
 <div class="values">
-    <input type="text" id="input" placeholder="variable">
-    <input type="text" id="inputTwo" placeholder="variable two">
+    <input type="text" id="input" placeholder="input 1">
+    <input type="text" id="inputTwo" placeholder="input 2">
+    <input type="text" id="inputNew" placeholder="insert a string to replace the primary string">
 </div>
 </div>
 </body>
